<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jssai.warehousepick.Login"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="false"
        android:layout_marginTop="250dp">

      <ImageView
          android:layout_width="130dp"
          android:layout_height="130dp"
          android:layout_gravity="center"
          android:src="@drawable/ic_logo"
          />
      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="50dp"
          android:layout_marginRight="50dp">
          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="Username"
              style="@style/Widget.AppCompat.EditText"
              android:id="@+id/user"/>
      </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                style="@style/Widget.AppCompat.EditText"
                android:id="@+id/password"
                />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/rememberMeSwitch"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:text="Remeber Me"/>
    </LinearLayout>
        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Sign In"
            android:layout_marginTop="10dp"
            android:onClick="login"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Configure IP"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="showIpConfig"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:id="@+id/textView" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="V0.0.1-B"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>


</RelativeLayout>
