<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sales_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jssai.warehousepick.SalesOrderListActivity">



...



    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/salesRecycler"
        android:layout_below="@+id/header"
     ></android.support.v7.widget.RecyclerView>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
...
