...

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:id="@+id/buttonPanel"
        android:layout_below="@+id/tabs_layout"
        android:orientation="horizontal">
        <Button
            android:layout_width="0px"
            android:layout_height="50dp"
            android:layout_weight="1"
...
